@@ -208,8 +208,12 @@ variable(s) whose address should be passed.
    Convert a Python integer to a C :ctype:`Py_ssize_t`.
 
 ``c`` (string of length 1) [char]
-   Convert a Python character, represented as a string of length 1, to a C
+   Convert a Python character, represented as a byte string of length 1, to a C
    :ctype:`char`.
+
+``C`` (string of length 1) [int]
+   Covert a Python character, represented as a unicode string of length 1, to a
+   C :ctype:`int`.
 
 ``f`` (float) [float]
    Convert a Python floating point number to a C :ctype:`float`.
